@@ -49,6 +49,7 @@ advice from friends like these:
 
  James Housley, Olaf Stueben, Yang Tse, Gisle Vanem, Bradford Bruce,
  Ciprian Badescu, Dmitriy Sergeyev, Nir Soffer, Venkat Akella, Toon Verwaest,
- Matt Witherspoon, Alexey Simak, Martin Skinner, Sh Diao, Jared Lundell
+ Matt Witherspoon, Alexey Simak, Martin Skinner, Sh Diao, Jared Lundell,
+ Stefan Krause
 
         Thanks! (and sorry if I forgot to mention someone)
